k8s/ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: genetics-suite
  namespace: genetics
  annotations:
    networking.gke.io/v1beta1.FrontendConfig: "https-redirect"
    kubernetes.io/ingress.global-static-ip-name: ${STATIC_IP_NAME}
    networking.gke.io/managed-certificates: "managed-cert"
    kubernetes.io/ingress.allow-http: "true"
spec:
  rules:
  - host: ${DOMAIN}
    http:
      paths:
      - path: /*
        pathType: ImplementationSpecific
        backend:
          service:
            name: auth-gateway
            port:
              number: 8080
